crates/compiler/src/tests/e2e/good/0326_closure_values_and_calls/main.gom
fn main() {
    let x = 1;
    let f = |y| x + y;
    let x = 10;
    let g = |y| x + y;
    println(f(100).to_string());
    println(g(100).to_string());
}
