crates/compiler/src/tests/e2e/bad/0057_let_chain_missing_initializer/main.gom
fn main() {
    let x = 1;
    let y = {
        let x = x + 10;
        let z = {
            let x = x + 100;
            x
        };
        z + x
    };
    println(x.to_string());
    println(y.to_string());
}
